menyesuaikan width todo dan date input

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <main class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md">
         <form>
             <div class="flex gap-2 mb-6">
-                <input type="text" id="todo-input" placeholder="Add a todo..." class="border p-2 flex-grow rounded">
-                <input type="date" id="date-input" class="border p-2 rounded">
+                <input type="text" id="todo-input" placeholder="Add a todo..." class="border p-2 w-1/2 flex-grow rounded">
+                <input type="date" id="date-input" class="border p-2 w-1/2 rounded">
                 <button type="button" onclick="validateForm()" class="rounded bg-blue-500 text-white p-2 w-10 h-10 flex items-center justify-center">
                     <i class="fas fa-plus"></i>
                 </button>
